--- a/index.html
+++ b/index.html
@@ -15,7 +15,11 @@
 
 	<title>Динамо-Мамы-Дубна</title>
 
-
+	<!--Подключение шрифтов-->
+	<link rel="stylesheet" href="fonts/PaluiSp/PaluiSPDemo-Bold.otf">
+	<link rel="stylesheet" href="fonts/ST/ST-Warmovie-noncommercial.ttf">
+	<!--Подключение шрифтов-->
+	
 	<link rel="icon" href="img/icon/32x32.png" type="image/svg+xml">
 
 	<link rel="stylesheet" href="style/swiper-bundle.min.css">
